--- a/storage/app/public/css/tooplate-style.css
+++ b/storage/app/public/css/tooplate-style.css
@@ -257,7 +257,7 @@ p {
 
 .fivth-section h4 {
 	margin-top: 60px;
-	color: #fff;
+	color: rgb(0, 0, 0);
 	font-size: 24px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -265,7 +265,7 @@ p {
 }
 
 .fivth-section p {
-	color: #fff;
+	color: rgb(0, 0, 0);
 	margin-top: 15px;
 }
 
